# portfolio

./: .gitignore  auth.py  config.py  database.py  main.py  models.py  portfolio.db  pyproject.toml  render.yaml  requirements.txt  schema.py
routes/: admin.py  contact.py  post.py
services/: email_feedback.py
static/css/: styles.css
static/html/: portfolio_page.html
