[project]
name = "professional-portfolio-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "resend>=2.30.1",
    "sqlalchemy>=2.0.49",
]
